# dataproducts

./: .coveragerc  .gitignore  Caddyfile  Cluster.csv  README.md  SCSE_profs.csv  manage.py  models.py  pyproject.toml  pytest.ini  schemas.py  template.env
api/: admin.py  api.py  apps.py  factories.py  models.py  schemas.py  views.py
api/migrations/: 0001_initial.py  0002_alter_researcherwebsites_type.py  0003_citation.py  0004_researcher_publications.py  0005_publication_num_citations_and_more.py  0006_alter_researcher_email_alter_researcher_name.py  0006_alter_researcher_email_alter_researcher_name_and_more.py  0007_publication_group.py
data/: Alexander Löser.json  Alfred Kobsa.json  Anupam Chattopadhyay.json  Arighna Deb.json  Arvind Easwaran.json  Austin Fowler.json  Chai Quek.json  Cham Tat Jen.json  Chee Wei Tan.json  Chia Liang Tien.json  Chng Eng Siong.json  Cong Gao.json  Deepu Rajan.json  Dusit Niyato.json  Erik Cambria.json  Georg Gottlob.json  Gianluca Demartini.json  Goerschwin Fey.json  Huang Shell Ying.json  Johann Gamper.json  Joo Hwee Lim.json  Kerstin Denecke.json  Kevin Verma.json  Kwoh Chee Keong.json  Lam Siew Kei.json  Li Boyang.json  Li Fang.json  Liang Zhang.json  Liu Weichen.json  Loke Yuan Ren.json  Lorenzo Malandri.json  Lu Shijian.json  Luo Jun.json  Luu Anh Tuan.json  Mehdi Saeedi.json  Melanie Diepenbeck.json  Miao Chun Yan.json  Michael Schroeder.json  Oh Hong Lye.json  Palakorn Achananuparp (Aek).json  (+13 more)
data/researchers/: A S Madhukumar.json  Alexei Sourin.json  (+62 more)
dataprod/: api.py  asgi.py  config.py  settings.py  urls.py  wsgi.py
(+4 files in other folders)
